--- a/src/nur.css
+++ b/src/nur.css
@@ -22,6 +22,9 @@
     width: 600px;
     margin: 0px auto;
   }
+  .m {
+    width: 500px;
+  }
 }
 @media only screen and (max-width: 640px) {
   .nur {
@@ -29,7 +32,7 @@
   }
   .text1 {
     font-size: 40px;
-    width: 400px;
+    width: 370px;
     margin: 0px auto;
   }
   .text2 {
